--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "babel -e -d lib/ src/",
+    "watch": "babel --watch -e -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "npm run compile && istanbul cover _mocha ",
     "test:watch": "npm run test -- -w"
@@ -21,6 +22,13 @@
     "watchify": "^3.2.3"
   },
   "dependencies": {
-    "fs": "0.0.2"
+    "blessed": "^0.1.7",
+    "blessed-contrib": "^2.2.0",
+    "fs": "0.0.2",
+    "nopt": "^3.0.3",
+    "yeoman-environment": "^1.2.5"
+  },
+  "bin": {
+    "relution": "lib/bootstrap.js"
   }
 }
