--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "watchify": "^3.2.3"
   },
   "dependencies": {
-    "blessed": "^0.1.7",
+    "blessed": "^0.1.81",
     "blessed-contrib": "^2.2.0",
     "fs": "0.0.2",
+    "i18n": "^0.5.0",
+    "inquirer": "^0.10.0",
+    "lodash": "^3.10.1",
     "nopt": "^3.0.3",
+    "react": "^0.14.0-beta3",
+    "react-blessed": "^0.1.3",
     "yeoman-environment": "^1.2.5"
   },
   "bin": {
