--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "babel": "*",
     "chai": "*",
+    "gulp": "^3.9.0",
+    "gulp-gh-pages": "^0.5.2",
     "istanbul": "*",
     "mocha": "*",
     "sinon": "^1.15.4",
