--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18n": "^0.5.0",
     "inquirer": "^0.10.0",
     "lodash": "^3.10.1",
+    "node-fetch": "^1.3.2",
     "nopt": "^3.0.3",
     "react": "^0.14.0-beta3",
     "react-blessed": "^0.1.3",
