--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "scripts": {
-    "compile": "babel -e -d lib/ src/",
-    "watch": "babel --watch -e -d lib/ src/",
+    "compile": "babel -e -d ./lib/ ./src/",
+    "watch": "babel --watch -e -d ./lib/ ./src/",
     "prepublish": "npm run compile",
     "test": "npm run compile && istanbul cover _mocha ",
     "test:watch": "npm run test -- -w"
