--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "license": "BSD-3-Clause",
   "main": "index.js",
   "scripts": {
-    "compile": "babel -e -d ./lib/ ./src/",
+    "compile": "babel src -d lib",
     "watch": "babel --watch -e -d ./lib/ ./src/",
     "prepublish": "npm run compile",
     "test": "npm run compile && istanbul cover _mocha ",
     "test:watch": "npm run test -- -w"
   },
   "devDependencies": {
-    "babel": "*",
+    "babel": "^5.0.0",
     "chai": "*",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.2",
