--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "watchify": "^3.2.3"
   },
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-beta.6",
     "archiver": "^0.15.1",
     "blessed": "^0.1.81",
     "blessed-contrib": "^2.2.0",
@@ -36,6 +37,7 @@
     "nopt": "^3.0.3",
     "react": "^0.14.0-beta3",
     "react-blessed": "^0.1.3",
+    "readline": "^1.3.0",
     "request": "^2.63.0",
     "yeoman-environment": "^1.2.5"
   },
