--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs": "0.0.2",
     "i18n": "^0.5.0",
     "inquirer": "^0.10.0",
+    "js-beautify": "^1.6.2",
     "lodash": "^3.10.1",
     "node-fetch": "^1.3.2",
     "nopt": "^3.0.3",
@@ -41,6 +42,7 @@
     "readline": "^1.3.0",
     "request": "^2.63.0",
     "rxjs": "^5.0.0-beta.6",
+    "typescript-formatter": "^2.1.0",
     "yeoman-environment": "^1.2.5"
   },
   "bin": {
